<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/item_image_sender_picture_messaging"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_nav_profile"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_view_content_posting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/article_posting_board_background"
        android:fontFamily="@font/noto_sans"
        android:gravity="top"
        android:hint="@string/say_something"
        android:minHeight="200dp"
        android:textColor="@color/black_3f3a3a"
        android:textSize="16sp"
        android:padding="@dimen/edit_text_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_image_sender_picture_messaging"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title_posting" />

    <EditText
        android:id="@+id/text_view_title_posting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/article_posting_board_background"
        android:fontFamily="@font/noto_sans"
        android:gravity="top"
        android:hint="@string/post_title"
        android:textColor="@color/black_3f3a3a"
        android:textSize="18sp"
        android:padding="@dimen/edit_text_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_image_sender_picture_messaging"
        app:layout_constraintTop_toBottomOf="@+id/item_image_sender_picture_messaging" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_article_edit_done_posting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/brown_b06f63"
        android:src="@drawable/ic_action_upload_sign"
        android:tint="@color/while_ffffff"
        app:backgroundTint="@color/brown_b06f63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_author_name_posting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black_3f3a3a"
        android:textSize="18sp"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintStart_toEndOf="@+id/item_image_sender_picture_messaging"
        app:layout_constraintTop_toTopOf="@+id/item_image_sender_picture_messaging"
        tools:text="@string/author_name"/>
</android.support.constraint.ConstraintLayout>