...
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:entries="@array/user_type_array"-->
        <!--android:fontFamily="@font/noto_sans"-->
        <!--android:gravity="center"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/button_facebook_login"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/imageLogo"-->
        <!--app:layout_constraintVertical_chainStyle="packed" />-->

    <Button
...
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radios_group_login_user_type" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginBottom="32dp"
...
            android:tag="@string/landlord"
            android:text="@string/landlord"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/button_login_user_type_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_radio_button_spacing"
            android:layout_weight="1"
            android:buttonTint="@color/green_6eafa6"
            android:fontFamily="@font/noto_sans"
...
