...
    <string name="electricity_fee_downloading">電費下載中，請稍等…</string>
    <string name="unit_electricity_fee_">本月單位電費( 元 / 度 ) : </string>
    <string name="unit_electricity_fee_check">確定</string>
    <string name="set_unit_electricity_fee_">您已設定單位電費為 %s 元</string>

    <!-- Login and Logout -->
    <string name="facebookLoginText">Facebook Login</string>
    <string name="logout">登出</string>

    <!-- User Type Selector -->
    <string name="landlord">房東</string>
    <string name="tenant">房客</string>
    <string name="select_user_type">請選擇登入類型</string>
    <string-array name="user_type_array">
        <item>@string/select_user_type</item>
        <item>@string/landlord</item>
        <item>@string/tenant</item>
    </string-array>
...
